# presentations

./: README.md
jsc_20210503/: dask_rechunking_demo.ipynb  pyproject.toml
jsc_20210503/data1/: 0005.tif  0008.tif  0012.tif  0018.tif  0023.tif  0024.tif  0026.tif  0028.tif  0031.tif  0034.tif  0038.tif  0041.tif  0042.tif  0044.tif  0052.tif  0065.tif  0066.tif  0068.tif  0069.tif  0071.tif  0072.tif  0077.tif  0079.tif  0085.tif  0095.tif  0100.tif  0106.tif  0113.tif  0119.tif  0122.tif  0123.tif  0124.tif  0125.tif  0127.tif  0128.tif  0131.tif  0141.tif  0144.tif  0150.tif  0152.tif  (+84 more)
jsc_20210503/data2/: 0011.tif  0020.tif  0021.tif  0032.tif  0036.tif  0039.tif  0048.tif  0049.tif  0051.tif  0053.tif  0055.tif  0057.tif  0060.tif  0061.tif  0067.tif  0075.tif  0080.tif  0081.tif  0082.tif  0083.tif  0084.tif  0091.tif  0092.tif  0093.tif  0094.tif  0103.tif  0105.tif  0114.tif  0117.tif  0120.tif  0126.tif  0129.tif  0134.tif  0140.tif  0153.tif  0163.tif  0166.tif  0168.tif  0171.tif  0172.tif  (+92 more)
jsc_20210503/test.n5/: attributes.json
jsc_20210503/test.n5/s0/: attributes.json
jsc_20210503/test.n5/s0/2/2/: 4
jsc_20210503/test.n5/s0/2/5/: 0
jsc_20210503/test.n5/s0/3/2/: 2
jsc_20210503/test.n5/s0/5/0/: 0
jsc_20210503/test.n5/s0/5/3/: 3
jsc_20210503/test.n5/s0/6/3/: 1
jsc_20210503/test.n5/s0/6/4/: 0
jsc_20210503/test.n5/s0/6/6/: 2
jsc_20210503/test.n5/s1/: attributes.json
jsc_20210503/test.n5/s1/0/0/: 0
jsc_20210503/test.n5/s1/1/0/: 3
jsc_20211206/: README.md  custom.css  examples.py  pyproject.toml  slides.ipynb
(+6 files in other folders)
