[tool.poetry]
name = "jsc_20210503"
version = "0.1.0"
description = "Materials for scicomp morning meeting, may 3 2021"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dask = "^2021.4.1"
dask-image = "^0.5.0"
jupyterlab = "^3.0.14"
dask-labextension = "5.0"
tifffile = "^2021.4.8"
scikit-image = "^0.18.1"
zarr = "^2.8.1"
dask-jobqueue = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
