[tool.poetry]
name = "scicomp-meeting-20211206"
version = "0.1.0"
description = ""
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pydantic = "^1.8.2"
lab = "^7.0"
jupyterlab = "^3.2.4"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
